tests/sksl/errors/BreakOutsideLoop.sksl
void outside_while()   { while(true) {} if (true) break; }
